# render

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  app-start.cmd  mesh.h  obj.h  parse.h  readme.md
.claude/: settings.local.json
.github/: copilot-instructions.md
src/: main.c  rasterizer.c  rasterizer.h
